--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -28,12 +28,9 @@ div#index-view, div#book-view {
 }
 
 /* timemap styles. */
-div#timemap {
-    padding: 1em;
-}
 div#timelinecontainer{
     width: 100%;
-    height: 300px;
+    height: 200px;
 }
 div#timeline{
     width: 100%;
@@ -49,4 +46,7 @@ div#map {
     width: 100%;
     height: 100%;
     background: #EEEEEE;
+}
+div.timeline-event-label {
+    margin: 3px 0px 0px 3px;
 }
