--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -17,14 +17,58 @@ div#index-view, div#book-view {
     background: #eee;
     margin: 0 20px 30px 20px;
     padding: 15px;
-    width: 70%;
     display: none;
+}
+div#index-view  {
+    width: 65%;
+}
+div#sidebar {
+    width: 35%;
+    float: right;
+}
+div#timemap-view {
+    width: 60%;
+}
+div.pagecontainer {
+    background: #FFF;
+    border: 1px solid #CCC;
+    height: 400px;
+    overflow: auto;
+    margin-bottom: 1em;
+    padding: .5em;
+}
+div#textnav {
+    margin: 10px 1em 10px 0px;
+    text-align: right;
 }
 
 /* specific text styles */
-#book-list li {
+header h1 a {
+    text-decoration: none;
+}
+
+a:link, a:visited, #book-list li {
     color: steelblue;
     cursor: pointer;
+}
+
+div#book-title-view h2 {
+    margin: 0;
+}
+div#book-title-view p {
+    margin-top: 0;
+}
+
+span#nextlink, span#prevlink {
+    color: #CCCCCC;
+    cursor: default;
+}
+span#nextlink.on, span#prevlink.on {
+    color: steelblue;
+    cursor: pointer;
+}
+span#prevlink {
+    margin-right: 15px;
 }
 
 /* timemap styles. */
@@ -40,7 +84,7 @@ div#timeline{
 }
 div#mapcontainer {
     width: 100%;
-    height: 300px;
+    height: 350px;
 }
 div#map {
     width: 100%;
