design tweaks for top-level views

--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -14,13 +14,15 @@ header {
 }
 
 div#index-view, div#book-view {
-    background: #f2f2f2;
+    background: #eee;
     margin: 0 20px 30px 20px;
     padding: 15px;
     display: none;
-}
-div#index-view  {
-    width: 65%;
+    position: absolute;
+    width: 95%;
+    height: 80%;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
 }
 div#reading-pane {
     width: 450px;
