fixing frequency bars

--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -71,6 +71,10 @@ div#place-freq-bars-view {
     width: 400px;
     height: 500px;
     padding: 1.5em 1em;
+    overflow: auto;
+}
+div#place-freq-bars-view svg {
+    width: 380px;
 }
 
 /* specific text styles */
