--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -111,6 +111,9 @@ div.book-title-view h2.on {
 div.book-title-view p {
     margin-top: 0;
 }
+#place-freq-bars-view h3 {
+    margin: 0 0 .5em 0;
+}
 
 /* page control buttons */
 span.control {
