--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -40,6 +40,9 @@ div.topview {
 }
 div.navigation-view {
     float: right;
+    width: 380px;
+    margin-left: 20px;
+    font-size: .8em;
 }
 
 /* book reading view */
