--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -42,7 +42,6 @@ div.navigation-view {
     float: right;
     width: 410px;
     margin-left: 20px;
-    font-size: .8em;
     text-align: right;
 }
 
@@ -186,6 +185,17 @@ div#map {
     width: 100%;
     height: 100%;
     background: #EEEEEE;
+}
+div#timemap-legend-container {
+    position: absolute;
+    height: 30px;
+    bottom: 0;
+    margin-bottom: -43px;
+    width: 100%;
+    text-align: right;
+}
+div#timemap-legend-container img {
+    margin: 0 5px 3px 5px;
 }
 
 /* timeline controls */
