--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -99,7 +99,7 @@ div#place-freq-bars-view {
 div#place-freq-bars-view svg {
     width: 380px;
 }
-div#book-summary-text-view {
+div#book-summary-text-view, div#book-wordcloud-view {
     margin-right: 450px;
 }
 
