--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -99,6 +99,11 @@ div#place-freq-bars-view {
 div#place-freq-bars-view svg {
     width: 380px;
 }
+div#place-freq-bars-view text.title {
+    text-anchor: end;
+    font-size: 10px;
+    cursor: pointer;
+}
 div#book-summary-text-view, div#book-wordcloud-view {
     margin-right: 450px;
 }
