--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -338,14 +338,32 @@ div.pagenum {
     position: absolute;
     display: none;
 }
-#change-this-hover {
-    position: absolute;
-    z-index: -1000;
-    background: #c00;
-    opacity: .5;
-}
 #change-this-link button {
     position: absolute;
     bottom: 0;
     right: 0;
+}
+#change-this-form {
+    display: none;
+}
+#change-this-form textarea {
+    width: 100%;
+}
+#change-this-form label {
+    display: block;
+    font-weight: bold;
+    margin: .5em 0;
+}
+#change-this-form  span {
+    font-weight: bold;
+    color: steelblue;
+}
+.ui-dialog-titlebar {
+    display:none
+}
+#change-this-form div.msg {
+    color: orange;
+    margin: .5em;
+    font-size: 1.5em;
+    text-align: center;
 }
