change this form working

--- a/app/templates/place-summary-template.html
+++ b/app/templates/place-summary-template.html
@@ -3,6 +3,7 @@
 <p>
     <span class="frequency"><%= frequency %></span> reference<%= frequency == 1 ? "" : "s" %>
 </p>
+<div><span class="change-this control on">Report a problem with this record</span></div>
 <h4>External Resources</h4>
 <ul>
     <li><a href="<%= uri %>" target="_blank">Place page on Pleiades</a></li>
