--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -56,6 +56,7 @@ div.topview {
     display: none;
     -moz-border-radius: 15px;
     border-radius: 15px;
+    overflow: hidden;
 }
 div.navigation-view {
     float: right;
@@ -66,6 +67,31 @@ div.navigation-view {
 div.panel {
     background: #FFF;
     border: 1px solid #CCC;
+}
+
+/* index view */
+#book-list-view {
+    width: 40%;
+    padding: 1em;
+    overflow: auto;
+    float: left;
+}
+#book-list em {
+    font-style: italic;
+}
+#instructions {
+    margin-left: 45%;
+    width: 45%;
+    overflow: auto;
+    padding: 0 2em 1em 2em;
+}
+div.thumbs {
+    width: 100px;
+    margin-left: 1em;
+    float: right;
+}
+div.thumbs img {
+    margin-bottom: 1em;
 }
 
 /* book reading view */
@@ -189,11 +215,6 @@ span.place:hover {
 }
 span.place.hi {
     background: yellow;
-}
-
-#book-list li {
-    color: steelblue;
-    cursor: pointer;
 }
 
 div.book-title-view h2 {
