final style tweaks

--- a/app/templates/book-summary-text-template.html
+++ b/app/templates/book-summary-text-template.html
@@ -1,5 +1,5 @@
 <p>
-    The Google Books version of "<%= title %>", by <%= author %>, was published in <%= printed %>. It is <%= pageCount %> pages long and references <%= places.length %> identified ancient places. 
+    The Google Books version of "<%= title %>", by <%= author %>, was published in <%= printed %>. It <!-- is <%= pageCount %> pages long and --> references <%= places.length %> identified ancient places. 
     
     The place most frequently referenced is <span class="place" data-place-id="<%= topPlaces[0].id %>"><%= topPlaces[0].title %></span>, followed by <span class="place" data-place-id="<%= topPlaces[1].id %>"><%= topPlaces[1].title %></span>, <span class="place" data-place-id="<%= topPlaces[2].id %>"><%= topPlaces[2].title %></span>, and <span class="place" data-place-id="<%= topPlaces[3].id %>"><%= topPlaces[3].title %></span>.
 </p>
