--- a/app/templates/book-title-template.html
+++ b/app/templates/book-title-template.html
@@ -1,6 +1,6 @@
 <h2 class="book-title"><%= title %></h2>
 <p><em>By <%= author %></em></p>
 <p>
-    Published <%= printed %>, <%= pages.length %> pages &middot;
+    Published <%= printed %><!--, <%= pages.length %> pages --> &middot;
     <a href="<%= uri %>">View on Google Books</a>
 </p>
