--- a/css/gapvis.css
+++ b/css/gapvis.css
@@ -97,6 +97,7 @@ div.panel {
     padding: 1em;
     overflow: auto;
     float: left;
+    height: 20em;
 }
 #book-list em {
     font-style: italic;
