--- a/lib/jquery/css/jquery-ui-1.8.16.custom.css
+++ b/lib/jquery/css/jquery-ui-1.8.16.custom.css
@@ -56,9 +56,9 @@
 
 /* Component containers
 ----------------------------------*/
-.ui-widget { font-family: Georgia, Garamond, serif;; font-size: 0.88em; }
+.ui-widget { font-family: Georgia, Garamond, serif; font-size: 0.88em; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Georgia, Garamond, serif;; font-size: 1em; }
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Georgia, Garamond, serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_inset-soft_50_ffffff_1x100.png) 50% bottom repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #bbbbbb; background: #dddddd url(images/ui-bg_glass_35_dddddd_1x400.png) 50% 50% repeat-x; color: #444444; font-weight: bold; }
