index view working with less

--- a/app/templates/book-list-template.html
+++ b/app/templates/book-list-template.html
@@ -1,2 +1,2 @@
-<span class="book-title control on"><%= title %></span><br>
-<em><%= author %></em>
+<h3>Select a book to view:</h3>
+<div id="book-list"></div>
